--- a/colorGame.html
+++ b/colorGame.html
@@ -3,6 +3,7 @@
 <head>
 	<title>Color Game</title>
 	<link rel="stylesheet" type="text/css" href="colorGame.css">
+	<link href="https://fonts.googleapis.com/css?family=Patrick+Hand+SC|Raleway" rel="stylesheet">
 </head>
 <body>
 <h1>
